# crossroads

./: .editorconfig  .env.dev  .gitignore  Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2018-11-14-054010_xr_setup/: down.sql  up.sql
migrations/2018-11-14-061628_create_base_table_xr_user/: down.sql  up.sql
migrations/2018-11-30-053127_create_base_table_xr_user_credential/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  setup.rs
