[package]
name = "crossroads"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]

[lib]
name = "crossroads"
path = "src/lib.rs"

[[bin]]
name = "crossroads"
path = "src/main.rs"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
juniper = "0.10"
serde = "1.0.79"
actix-web = "0.7.8"
