[package]
name = "crossroads"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]

[lib]
name = "crossroads"
path = "src/lib.rs"

[dependencies]
actix-web = "~0.7"
chrono = { version = "~0.4", features = ["serde"] }
diesel = { version = "~1.3", features = ["chrono", "postgres", "uuid"] }
diesel_migrations = "~1.3"
juniper = "0.10"
regex = "~1"
serde = "~1.0"
serde_derive = "~1.0"
uuid = { version = "~0.6", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "0.5"

# The development profile, used for `cargo build`
[profile.dev]
codegen-units = 4
